--- a/style.css
+++ b/style.css
@@ -6,26 +6,70 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 5fr;
+    column-gap: 50px;
 }
 
 .sidebar {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
-    background-color: aqua;
+    row-gap: 50px;
+
+    padding: 25px;
+    background-color: rgb(41, 147, 196);
+    align-content: flex-start;
 }
 
 .header {
     grid-column: 2 / 3 ;
 }
 
+.large-profile-picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    object-fit: cover;
+}
 
 .small-profile-picture {
     width: 50px;
     height: 50px;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 .main-content {
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.project-cards {
+    grid-column: 1 / 1;
+}
+
+
+.main-content-right-side {
+    display: grid;
+    grid-column: 2 / 2;
+}
+
+.sidebar-item {
+    color: white;
+    display: grid;
+    grid-template-columns: 1fr 10fr;
+    column-gap: 25px;
+    align-items: center;
+}
+
+.sidebar-group-one,
+.sidebar-group-two {
+    display: grid;
+    row-gap: 25px;
+}
+
+.trending-card img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
 }
