--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Helvetica, sans-serif;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr 7fr;
-    row-gap: 50px;
 }
 
 .sidebar {
@@ -14,8 +14,8 @@
     grid-row: 1 / 3;
     display: grid;
     row-gap: 50px;
-    padding: 25px;
-    background-color: rgb(64, 171, 221);
+    padding: 25px 50px 25px 25px;
+    background-color: rgb(25 146 212);
     align-content: flex-start;
 }
 
@@ -29,7 +29,7 @@
     padding-bottom: 25px;
     padding-top: 25px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
-    z-index: -1;
+    z-index: 1;
 }
 
 .header-top-row {
@@ -76,10 +76,10 @@
 }
 
 .header-bottom-row button{
-    padding: 16px 32px;
+    padding: 12px 32px;
     border: 0;
     border-radius: 50px;
-    background-color: rgb(64, 171, 221);
+    background-color: rgb(43, 174, 235);
     color: white;
     font-weight: 700;
 }
@@ -97,8 +97,8 @@
 }
 
 .large-profile-picture {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     border-radius: 50px;
     object-fit: cover;
 }
@@ -113,9 +113,19 @@
 .main-content {
     grid-column: 2 / 3;
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    padding-left: 25px;
-    column-gap: 40px;
+    justify-content: center;
+    padding: 50px 0px 50px 25px;
+    row-gap: 15px;
+    column-gap: 30px;
+    grid-template-columns: min-content 300px;
+    background-color: #e2e8f0;
+}
+
+.announcement-label, 
+.trending-label,
+.projects-label {
+    font-size: 18px;
+    font-weight: 700;
 }
 
 .announcement-label {
@@ -126,11 +136,16 @@
 .announcements {
     display: flex;
     flex-flow: column;
-    gap: 25px;
+    gap: 10px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
-    padding: 20px;
-    border-radius: 20px;
-    width: 250px;    
+    padding: 30px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: white;
+}
+
+.announcement-card {
+    font-size: 12px;
 }
 
 .announcement-card:nth-child(2) {
@@ -143,31 +158,57 @@
 .project-cards {
     grid-column: 1 / 1;
     display: grid;
-    grid-template: 1fr 1fr 1fr / 2fr 2fr;
-    gap: 20px;
+    grid-template: repeat(3, 200px) / repeat(2, 400px);
+    gap: 30px;
 }
 
 .project-card {
-    display: flex;
-    flex-flow: column nowrap;
+    display: grid;
+    grid-template-columns: 8px 1fr;
+    grid-template-rows: 1fr 64px;
     background-color: white;
-    border-radius: 20px;
-    padding: 30px 15px;
+    border-radius: 10px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
-    border-left-color: gold;
-    border-left-width: 8px;
-    border-left-style: solid;
+    column-gap: 20px;
+}
+
+.project-card h1 {
+    font-size: 24px;
+} 
+
+.project-card p,
+.trending-card p:nth-child(2) {
+    color: rgb(88, 88, 88);
+}
+
+.project-card .text {
+    padding-top: 10px;
+}
+
+.project-card .text, 
+.project-card .icons {
+    margin: 20px 20px 20px 0px;
+}
+
+.yellow-bar {
+    background-color: rgb(240 180 41);
+    border-radius: 50px 0px 0px 50px;
+    grid-row: 1 / 3;
+    height: 100%;
+    align-self: center;
+    box-sizing: border-box;
 }
 
 .project-card .icons {
-    align-self: flex-end;
-    margin-top: 15px;
+    justify-self: end;
+    display: flex;
+    gap: 10px;
 }
 
 .main-content-right-side {
     display: grid;
     grid-column: 2 / 2;
-    row-gap: 25px;
+    row-gap: 10px;
 }
 
 .sidebar-item {
@@ -184,27 +225,27 @@
     row-gap: 25px;
 }
 
+
 .trending {
-    flex-flow: column;
-    display: flex;
-    gap: 10px;
-    width: max-content;
+    display: grid;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+    justify-content: start;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 10px;
+    gap: 20px;
+    background-color: #fff;
 }
 
 .trending-card {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     align-items: center;
+    font-size: 14px;
 }
 
 .trending-card img{
     width: 50px;
     height: 50px;
     border-radius: 50px;
-
+    object-fit: cover;
 }
-
-
