--- a/style.css
+++ b/style.css
@@ -40,6 +40,22 @@
     justify-content: space-between;
 }
 
+
+.right-side > h2{
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+h1.large-name {
+    font-size: 24px;
+}
+
+p.greeting {
+    font-size: 12px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
 .header-top-row input {
     outline: none;
     width: 500px;
@@ -82,6 +98,7 @@
     background-color: rgb(43, 174, 235);
     color: white;
     font-weight: 700;
+    font-size: 14px;
 }
 
 .buttons {
